--- a/src/main/resources/templates/clienteLista.html
+++ b/src/main/resources/templates/clienteLista.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="row">
                     <div class="form-actions float-left">
-                        <button type="submit" class="btn btn-success" ng-disabled="clienteForm.$invalid || clienteForm.$pristine">
+                        <button type="submit" class="btn btn-success" >
                             <i class="fa fa-hdd-o"></i> {{!ctrl.cliente.id ? 'Adicionar' : 'Atualizar'}}
                         </button>
                         <button type="button" ng-click="ctrl.reset()" class="btn btn-default">
